--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sweetalert2-react-content": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
