--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^9.10.3",
     "sweetalert2-react-content": "^3.0.1"
   },
