--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-loader-spinner": "^3.1.5",
