--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,11 @@ deploy-production:
   stage: production
   environment:
     name: production
-    url: https://ayovest-livestock.herokuapp.com/
+    url: https://$HEROKU_PRODUCTION_APP.$DOMAIN_APP
   script:
     - apt-get update -qy
     - apt-get install -y ruby ruby-dev rubygems-integration
     - gem install dpl
-    - dpl --provider=heroku --app=ayovest-livestock --api-key=8ccade31-7bff-4ad5-b7f8-f054119f0fdegit
+    - dpl --provider=heroku --app=$HEROKU_PRODUCTION_APP --api-key=$HEROKU_API_KEY
   only:
     - master
